Added Grarage S3, Commented File Storage

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	implementation 'io.opentelemetry.instrumentation:opentelemetry-logback-appender-1.0:2.21.0-alpha'
 	implementation 'io.github.openfeign:feign-micrometer'
 
+	implementation 'software.amazon.awssdk:s3:2.25.0'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
