--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,15 @@ server.port=8086
 spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=30MB
 
-
 app.paths.dir.uploads=/data/uploads
 app.paths.dir.downloads=/data/downloads
 
 spring.threads.virtual.enabled=true
 
+#eureka
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_DEFAULT_ZONE:http://localhost:8761/eureka}
+
+#db
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5433/storage_db}
 spring.datasource.username=${SPRING_DATASOURCE_USER:sa}
 spring.datasource.password=${SPRING_DATASOURCE_PASS:root}
@@ -18,9 +21,17 @@ spring.datasource.password=${SPRING_DATASOURCE_PASS:root}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+#Observability, Metrics, Traces, Otel
 management.tracing.sampling.probability=${OTEL_TRACE_SAMPLING_PROB:1.0}
 management.opentelemetry.tracing.export.otlp.endpoint=${OTEL_TRACE_ENDPOINT:http://localhost:4318/v1/traces}
 management.opentelemetry.logging.export.otlp.endpoint=${OTEL_LOGS_ENDPOINT:http://localhost:4318/v1/logs}
 management.otlp.metrics.export.url=${OTEL_METRICS_ENDPOINT:http://localhost:4318/v1/metrics}
+
+#S3 storage Garage
+garage.endpoint=${GARAGE_ENDPOINT}
+garage.access-key=${GARAGE_ACCESS_KEY}
+garage.secret-key=${GARAGE_SECRET_KEY}
+garage.bucket.uploads=${GARAGE_BUCKET_UPLOADS:uploads}
+garage.bucket.downloads=${GARAGE_BUCKET_DOWNLOADS:downloads}
 
 
